[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scipion-em-hax"
dynamic = ["version", "dependencies"]
description = "Plugin to execute Hax package inside Scipion"
authors = [
    {name = "David Herreros", email = "dherreros@cnb.csic.es"},
    {name = "Eduardo García", email = "eduardo.garcia@cnb.csic.es"}
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "GNU General Public License v3 (GPLv3)"}
classifiers = [
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
]
keywords = ["scipion", "continuous-heterogeneity", "imageprocessing", "scipion-3.0", "Hax"]

[project.urls]
Homepage = "https://github.com/scipion-em/scipion-em-hax"
Issues = "https://github.com/scipion-em/scipion-em-hax/issues"

[tool.setuptools.dynamic]
version = {attr = "hax.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
"hax" = ["logo.png", "protocols.conf"]

[project.entry-points."pyworkflow.plugin"]
hax = "hax"
